--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "express-session": "^1.17.3",
     "mysql2": "^2.3.3",
     "sass": "^1.52.1",
-    "sequelize": "^6.20.1"
+    "sequelize": "^6.20.1",
+    "sequelize-cli": "^6.4.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
